Fixed invisible elements while sorting

--- a/static/gui/gui6.css
+++ b/static/gui/gui6.css
@@ -815,6 +815,6 @@ width: 90% !important;
     top:100%;
 }
 
-#westTab_header li, #renderMenus_header li{
-   z-index:999999 !important;   
+#mainLayout-north{
+    z-index: 99999!important;
 }
